--- a/static/style.scss
+++ b/static/style.scss
@@ -1,9 +1,12 @@
 /*# sourceMappingURL=style.css.map */
 
-body {
+html, body {
   margin: 0;
   font-family: "Inter", Arial, sans-serif;
   color: #1b1e2a;
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
 }
 
 .app-container {
@@ -485,7 +488,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 0% 0%;
-  animation: decision-flash 1s linear forwards;
+  animation: decision-flash 0.65s linear forwards;
 
   &.left { --flash-color: rgba(20, 105, 255, 1); }
   &.right { --flash-color: rgba(255, 72, 72, 1); }
@@ -527,7 +530,7 @@ body {
 
 @keyframes decision-flash {
   0% {
-    opacity: 0;
+    opacity: 0.2;
     background-size: 0% 0%;
   }
   25% {
