--- a/docs/static/style.scss
+++ b/docs/static/style.scss
@@ -39,6 +39,7 @@ body {
 }
 
 .app-container {
+  touch-action: pan-y;
   position: relative;
   min-height: 100vh;
   display: flex;
@@ -48,6 +49,8 @@ body {
   padding: 3.5rem 1rem 2.5rem;
   box-sizing: border-box;
 }
+
+
 
 .content {
   &.single-column {
